# embedded-tdd

./: CMakeLists.txt  README.md
LedDriver/: CMakeLists.txt  LedDriver.cpp
LightScheduler/: CMakeLists.txt  LightScheduler.cpp  LightScheduler_internal.cpp  internal.cpp
include/: LedDriver.hpp
include/LightScheduler/: LightController.hpp  LightScheduler.hpp  LightScheduler_internal.hpp  internal.hpp  time.hpp
include/lights/: LightController.hpp  LightScheduler.hpp  internal.hpp  time.hpp
lights/: CMakeLists.txt  LightScheduler.cpp  internal.cpp
tests/: CMakeLists.txt
tests/LedDriver/: led_driver_test.cpp
tests/LightScheduler/: LightController.cpp  fake_time.cpp  fake_time.hpp  fake_time_test.cpp  light_scheduler_test.cpp
tests/lights/: LightController.cpp  fake_light_controller.hpp  fake_light_controller_test.cpp  fake_time.cpp  fake_time.hpp  fake_time_test.cpp  light_scheduler_test.cpp
